--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css" />
         <script src="https://kit.fontawesome.com/49959ec1b7.js" crossorigin="anonymous"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>A la française</title>
     </head>
 
@@ -12,12 +12,12 @@
         <header class="header">
             <div id="logo">
                 <a href="index.html" class="go_back"><i class="fa-solid fa-arrow-left-long"></i></a>
-                <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="img_logo_other"/>
+                <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="img_logo_other">
             </div> 
         </header>
 
         <main>
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A La Française" class="img_back" />
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A La Française" class="img_back">
             <div  class="bloc_choice">
                 <div class="title_restorant">
                     <h1 class="title_shrikhand">A la française</h1>
