--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/49959ec1b7.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>A la française</title>
@@ -32,7 +32,7 @@
                         <div class="carte">
                             <article class="choice">    
                                 <div class="choice_description">
-                                    <h2 classe="plats">Tartare de poulpe acidulé</h2>
+                                    <h2 class="plats">Tartare de poulpe acidulé</h2>
                                     <div class="ingrédients">
                                         <p class="description">Aux zests d'orange</p>
                                         <div class="price">
@@ -48,7 +48,7 @@
                             </article>
                             <article class="choice">    
                                 <div class="choice_description">
-                                    <h2 classe="plats">Velouté de légumes d'antan</h2>
+                                    <h2 class="plats">Velouté de légumes d'antan</h2>
                                     <div class="ingrédients">
                                         <p class="description">Carotte, panais, topinambour</p>
                                         <div class="price">
@@ -64,7 +64,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Soupe à l'oignon</h2>
+                                    <h2 class="plats">Soupe à l'oignon</h2>
                                     <div class="ingrédients">
                                         <p class="description">Revisitée</p>
                                         <div class="price">
@@ -86,7 +86,7 @@
                         <div class="carte">
                             <article class="choice">    
                                 <div class="choice_description">
-                                    <h2 classe="plats">Coquilles Saint-Jacques</h2>
+                                    <h2 class="plats">Coquilles Saint-Jacques</h2>
                                     <div class="ingrédients">
                                         <p class="description">Accompagnées d'une purée de panais</p>
                                         <div class="price">
@@ -103,7 +103,7 @@
                             <article class="choice">
                                 
                                 <div class="choice_description">
-                                    <h2 classe="plats">Magret de canard</h2>
+                                    <h2 class="plats">Magret de canard</h2>
                                     <div class="ingrédients">
                                         <p class="description">Et parmentier de pommes de terre</p>
                                         <div class="price">
@@ -119,7 +119,7 @@
                             </article>
                             <article class="choice"> 
                                 <div class="choice_description">
-                                    <h2 classe="plats">Pigeonneau d’Ille-et-Vilaine</h2>
+                                    <h2 class="plats">Pigeonneau d’Ille-et-Vilaine</h2>
                                     <div class="ingrédients">
                                         <p class="description">Sur son lit de gnocchis aux légumes</p>
                                         <div class="price">
@@ -141,7 +141,7 @@
                         <div class="carte">
                             <article class="choice">    
                                 <div class="choice_description">
-                                    <h2 classe="plats">Pétales de violettes glacés</h2>
+                                    <h2 class="plats">Pétales de violettes glacés</h2>
                                     <div class="ingrédients">
                                         <p class="description">Et purée de noisettes</p>
                                         <div class="price">
@@ -157,7 +157,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Fondant au chocolat</h2>
+                                    <h2 class="plats">Fondant au chocolat</h2>
                                     <div class="ingrédients">
                                         <p class="description">Revisité</p>
                                         <div class="price">
@@ -173,7 +173,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Millefeuille croustillant</h2>
+                                    <h2 class="plats">Millefeuille croustillant</h2>
                                     <div class="ingrédients">
                                         <p class="description">Myrtilles et pâte d’amande</p>
                                         <div class="price">
