--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="css/style.css" />
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/49959ec1b7.js" crossorigin="anonymous"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>La palette du goût</title>
     </head>
 
@@ -12,12 +12,12 @@
         <header>
             <div id="logo">
                 <a href="index.html" class="go_back"><i class="fa-solid fa-arrow-left-long"></i></a>
-                <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="img_logo_other" />
+                <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="img_logo_other">
             </div>
         </header>
 
         <main>
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La Palette du Goût" class="img_back" />
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La Palette du Goût" class="img_back">
             <div class="bloc_choice">         
                 <div class="title_restorant">
                     <h1 class="title_shrikhand">La palette du goût</h1>
@@ -32,7 +32,7 @@
                         <div class="carte"> 
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Fricassé d'escargot</h2>
+                                    <h2 class="plats">Fricassé d'escargot</h2>
                                     <div class="ingrédients">
                                         <p class="description">Au piment d'Espelette</p>
                                         <div class="price">
@@ -48,7 +48,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Foie gras de canard mi-cuit</h2>
+                                    <h2 class="plats">Foie gras de canard mi-cuit</h2>
                                     <div class="ingrédients">
                                         <p class="description">Et ses copeaux de truffe noire</p>
                                         <div class="price">
@@ -64,7 +64,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Oeuf au plat</h2>
+                                    <h2 class="plats">Oeuf au plat</h2>
                                     <div class="ingrédients">
                                         <p class="description">Assaisonné à la truffe sur lit de caviar</p>
                                         <div class="price">
@@ -86,7 +86,7 @@
                         <div class="carte">   
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Filet de boeuf aux herbes</h2>
+                                    <h2 class="plats">Filet de boeuf aux herbes</h2>
                                     <div class="ingrédients">
                                         <p class="description">Accompagné de sa ribambelle de légumes</p>
                                         <div class="price">
@@ -102,7 +102,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Parmentier de queue de boeuf</h2>
+                                    <h2 class="plats">Parmentier de queue de boeuf</h2>
                                     <div class="ingrédients">
                                         <p class="description">À la truffe noire sur sa purée de panais</p>
                                         <div class="price">
@@ -118,7 +118,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Filet de turbot</h2>
+                                    <h2 class="plats">Filet de turbot</h2>
                                     <div class="ingrédients">
                                         <p class="description">Aux agrumes</p>
                                         <div class="price">
@@ -140,7 +140,7 @@
                         <div class="carte">    
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Paris-Brest</h2>
+                                    <h2 class="plats">Paris-Brest</h2>
                                     <div class="ingrédients">
                                         <p class="description">Revisité</p>
                                         <div class="price">
@@ -157,7 +157,7 @@
                             <article class="choice">
                                 
                                 <div class="choice_description">
-                                    <h2 classe="plats">Macaron au chocolat d'exception </h2>
+                                    <h2 class="plats">Macaron au chocolat d'exception </h2>
                                     <div class="ingrédients">
                                         <p class="description">Et glace à la vanille de Madagascar</p>
                                         <div class="price">
@@ -173,7 +173,7 @@
                             </article>
                             <article class="choice">    
                                 <div class="choice_description">
-                                    <h2 classe="plats">Mousse au chocolat</h2>
+                                    <h2 class="plats">Mousse au chocolat</h2>
                                     <div class="ingrédients">
                                         <p class="description">Au piment d'Espelette et à la truffe noire</p>
                                         <div class="price">
