--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="css/style.css" />
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/49959ec1b7.js" crossorigin="anonymous"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>ohmyfood</title>
     </head>
 
@@ -16,7 +16,7 @@
         
         <header class="header">
             <div id="logo_principal">
-                <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="img_logo"/>
+                <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="img_logo">
             </div>
             <div id="location_bar">
                 <div id="icon_location">
@@ -75,13 +75,13 @@
 
         <main class="main">
             <section class="restorants">
-                <h1>Restaurants</h1>
+                <h2>Restaurants</h2>
                 <div class="anounce">
                     <a href="lapalettedugout.html" class="lien">
                         <article class="card_oppening">
                             <div class="article_restorant">
                                 <div class="new"><span class="new_text">Nouveau</span></div>
-                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La Palette du Goût" class="img_restaurant" />
+                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La Palette du Goût" class="img_restaurant">
                                 <div class="article_description">
                                     <div class="title_descritpion">
                                         <h3>La palette du goût</h3>
@@ -101,7 +101,7 @@
                         <article class="card_oppening">
                             <div class="article_restorant">
                                 <div class="new"><span class="new_text">Nouveau</span></div>
-                                <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La Note Enchantée" class="img_restaurant" />
+                                <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La Note Enchantée" class="img_restaurant">
                                 <div class="article_description">
                                     <div class="title_descritpion">
                                         <h3>La note enchantée</h3>
@@ -120,7 +120,7 @@
                     <a href="alafrançaise.html" class="lien">
                         <article class="card_oppening">
                             <div class="article_restorant">
-                                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A La Française" class="img_restaurant" />
+                                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A La Française" class="img_restaurant">
                                 <div class="article_description">
                                     <div class="title_descritpion">
                                         <h3>A la française</h3>
@@ -139,7 +139,7 @@
                     <a href="delicedessens.html" class="lien">
                         <article class="card_oppening">
                             <div class="article_restorant">
-                                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le Délice des Sens" class="img_restaurant" />
+                                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le Délice des Sens" class="img_restaurant">
                                 <div class="article_description">
                                     <div class="title_descritpion">
                                         <h3>Le délice des sens</h3>
