--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="css/style.css" />
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/49959ec1b7.js" crossorigin="anonymous"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>La note enchantée</title>
     </head>
 
@@ -12,12 +12,12 @@
         <header>
             <div id="logo">
                 <a href="index.html" class="go_back"><i class="fa-solid fa-arrow-left-long"></i></a>
-                <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="img_logo_other"/>
+                <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="img_logo_other">
             </div>
         </header>
 
         <main>
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La Note Enchantée" class="img_back" />
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La Note Enchantée" class="img_back">
             <div class="bloc_choice">
                 <div class="title_restorant">
                     <h1 class="title_shrikhand">La note enchantée</h1>
@@ -32,7 +32,7 @@
                         <div class="carte_only">
                             <article class="choice">  
                                 <div class="choice_description">
-                                    <h2 classe="plats">Ravioles de foie gras</h2>
+                                    <h2 class="plats">Ravioles de foie gras</h2>
                                     <div class="ingrédients">
                                         <p class="description">Accompagnés de leur crème à la truffe</p>
                                         <div class="price">
@@ -48,7 +48,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Caviar osciètre</h2>
+                                    <h2 class="plats">Caviar osciètre</h2>
                                     <div class="ingrédients">
                                         <p class="description">Sur blini à la farine de blé noir</p>
                                         <div class="price">
@@ -65,7 +65,7 @@
                             <article class="choice">
                                 
                                 <div class="choice_description">
-                                    <h2 classe="plats">Homard et espuma de potiron</h2>
+                                    <h2 class="plats">Homard et espuma de potiron</h2>
                                     <div class="ingrédients">
                                         <p class="description">Mariné aux zestes d'orange</p>
                                         <div class="price">
@@ -81,7 +81,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Foie gras de canard cuit entier</h2>
+                                    <h2 class="plats">Foie gras de canard cuit entier</h2>
                                     <div class="ingrédients">
                                         <p class="description">Confiture de figue et pain toasté</p>
                                         <div class="price">
@@ -103,7 +103,7 @@
                         <div class="carte">
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Noix de coquilles Saint-Jacques</h2>
+                                    <h2 class="plats">Noix de coquilles Saint-Jacques</h2>
                                     <div class="ingrédients">
                                         <p class="description">Sur lit de purée de céleri-rave</p>
                                         <div class="price">
@@ -119,7 +119,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Langoustine poêlée</h2>
+                                    <h2 class="plats">Langoustine poêlée</h2>
                                     <div class="ingrédients">
                                         <p class="description">Purée de patate douce</p>
                                         <div class="price">
@@ -135,7 +135,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Mijoté de queue de boeuf</h2>
+                                    <h2 class="plats">Mijoté de queue de boeuf</h2>
                                     <div class="ingrédients">
                                         <p class="description">Et riz sauvage aux zestes de citron</p>
                                         <div class="price">
@@ -157,7 +157,7 @@
                         <div class="carte">
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Macaron noisette et chocolat</h2>
+                                    <h2 class="plats">Macaron noisette et chocolat</h2>
                                     <div class="ingrédients">
                                         <p class="description">Glace au caramel brun et sel de Guérande</p>
                                         <div class="price">
@@ -173,7 +173,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Baba au rhum revisité </h2>
+                                    <h2 class="plats">Baba au rhum revisité </h2>
                                     <div class="ingrédients">
                                         <p class="description">Avec son coulis de citron</p>
                                         <div class="price">
@@ -189,7 +189,7 @@
                             </article>
                             <article class="choice">
                                 <div class="choice_description">
-                                    <h2 classe="plats">Tarte au citron meringuée</h2>
+                                    <h2 class="plats">Tarte au citron meringuée</h2>
                                     <div class="ingrédients">
                                         <p class="description">Déstructurée</p>
                                         <div class="price">
