Nom fichiers + footer desktop + taille logo + police

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             </div>
                         </article>
                     </a>
-                    <a href="lanoteenchantée.html" class="lien">
+                    <a href="lanoteenchantee.html" class="lien">
                         <article class="card_oppening">
                             <div class="article_restorant">
                                 <div class="new"><span class="new_text">Nouveau</span></div>
@@ -117,7 +117,7 @@
                             </div>
                         </article>
                     </a>
-                    <a href="alafrançaise.html" class="lien">
+                    <a href="alafrancaise.html" class="lien">
                         <article class="card_oppening">
                             <div class="article_restorant">
                                 <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A La Française" class="img_restaurant">
