Modif : transition coeur + localisation + bouton + new + placemetn coeurs + text acceuil + icons footer + contact footer + icon explan

--- a/delicedessens.html
+++ b/delicedessens.html
@@ -206,8 +206,8 @@
             <ul>
                 <li><a href="#" class="help"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
                 <li><a href="#" class="help"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
-                <li><a href="#" class="help"><i class="fa-solid fa-scale-balanced"></i> Mentions légales</a></li>
-                <li><a href="#" class="help"><i class="fa-solid fa-address-book"></i> Contact</a></li>
+                <li><a href="#" class="help">Mentions légales</a></li>
+                <li><a href="mailto:ohmyfood" class="help">Contact</a></li>
             </ul>
         </footer>
     </body>
