--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <p class="city">Paris, Belleville</p>
             </div>
             <div id="discover_restorant">
-                <h1>Réserver le menu qui vous convient</h1>
-                <p class="text_light">Découvrez des restaurants d'exception, éléctionnés par nos soins.</p>
+                <h1 class="discover">Réserver le menu qui </br> vous convient</h1>
+                <p class="text_light">Découvrez des restaurants d'exception, </br> éléctionnés par nos soins.</p>
                 <button class="button_"><span class="text_button">Explorer nos restaurants</span></button>
             </div>
             <div id="concept">
@@ -164,8 +164,8 @@
             <ul>
                 <li><a href="#" class="help"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
                 <li><a href="#" class="help"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
-                <li><a href="#" class="help"><i class="fa-solid fa-scale-balanced"></i> Mentions légales</a></li>
-                <li><a href="#" class="help"><i class="fa-solid fa-address-book"></i> Contact</a></li>
+                <li><a href="#" class="help">Mentions légales</a></li>
+                <li><a href="mailto:ohmyfood" class="help">Contact</a></li>
             </ul>
         </footer>
     </body>
